# micro

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  STORY.md  TODO.md  debug.sh  main  makefile  release.sh
lua/: audio.lua  components.lua  ecs.lua  global.lua  graphics.lua  libmicro.lua  micro.lua  noise.lua  physics.lua  resources.lua  state.lua  system.lua  tilemap.lua
res/shaders/: base_vert.glsl  planet.glsl  shadow.glsl  space.glsl
res/textures/: particle-smoke.ase  player-idle.ase  redsauron-small-idle.ase  redsauron-small-walk.ase
src/: Audio.c  Audio.h  AudioLua.c  AudioLua.h  ECS.c  ECS.h  Error.c  Error.h  Graphics.c  Graphics.h  GraphicsLua.c  GraphicsLua.h  Physics.c  Physics.h  Resources.c  Resources.h  State.c  State.h  Vector.c  \  main.c  test.c  test.txt
src/components/: CAnimation.c  CAnimation.h  CLockOnView.c  CLockOnView.h  CPosition.c  CPosition.h  CShadedCanvas.c  CShadedCanvas.h  CSprite.c  CSprite.h  CUpdate.c  CUpdate.h  CVelocity.c  CVelocity.h  CustomComponents.c  CustomComponents.h  LogicComponents.c  LogicComponents.h  MotionComponents.c  MotionComponents.h  RenderingComponents.c  RenderingComponents.h
src/entities/: Cave.c  Cave.h  Drone.c  Drone.h  DroneLander.c  DroneLander.h  Explosion.c  Explosion.h  GUI.c  GUI.h  LogGUI.c  LogGUI.h  Meteor.c  Meteor.h  Planet.c  Planet.h  Player.c  Player.h  Portal.c  Portal.h  Projectile.c  Projectile.h  Resource.c  Resource.h  Space.c  Space.h  Spawner.c  Spawner.h
src/managers/: inventory.h
src/micro/: Audio.c  Audio.h  ECS.c  ECS.h  Error.c  Error.h  Graphics.c  Graphics.h  Physics.c  Physics.h  Resources.c  Resources.h  State.c  State.h  System.c  System.h  Vector.c  Vector.h
src/micro/components/: AudioComponents.c  AudioComponents.h  Components.c  Components.h  LogicComponents.c  LogicComponents.h  MotionComponents.c  MotionComponents.h  RenderingComponents.c  RenderingComponents.h
src/micro/core/: Audio.c  Audio.h  ECS.c  ECS.h  Graphics.c  Graphics.h  Micro.c  Micro.h  Noise.c  Noise.h  Pathfinding.c  Pathfinding.h  Physics.c  Physics.h  PhysicsStub.c  Resources.c  Resources.h  State.c  State.h  System.c  System.h  Tilemap.c  Tilemap.h  UI.c  UI.h
src/micro/custom/: GroundMap.c  GroundMap.h
src/micro/lua/: audio.lua  components.lua  ecs.lua  global.lua  graphics.lua  libmicro.lua  micro.lua  physics.lua  resources.lua  state.lua  system.lua  tilemap.lua
src/micro/systems/: AnimationSystem.c  AnimationSystem.h  ControllerSystem.c  EventsSystem.c  EventsSystem.h  FollowSystem.c  FollowSystem.h  InteractionSystem.c  LifetimeSystem.c  LifetimeSystem.h  LightSystem.c  ListenerSystem.c  LockOnViewSystem.c  LockOnViewSystem.h  ParentSystem.c  ParticlesSystem.c  ParticlesSystem.h  PhysicsSystem.c  PhysicsSystem.h  RenderingSystem.c  RenderingSystem.h  ScriptedUpdateSystem.c  ShadedCanvasSystem.c  ShadedCanvasSystem.h  Systems.c  Systems.h  TilemapSystem.c  UISystem.c  UpdateSystem.c  UpdateSystem.h
src/micro/util/: Types.h  debug.c  debug.h  hashmap.c  hashmap.h  mat.c  mat.h  perlin_noise.h  resourcebuf.c  resourcebuf.h  strdict.c  strdict.h  vector.c  vector.h  vector2d.h  vmath.c  vmath.h
src/misc/: ambience_music.c  ambience_music.h  collision.h  inventory.c  items.h  layers.h
src/states/: GameState.c  GameState.h  TestState.c  TestState.h
src/systems/: AnimationSystem.c  AnimationSystem.h  EventsSystem.c  EventsSystem.h  FollowSystem.c  FollowSystem.h  GravitySystem.c  GravitySystem.h  InteractionSystem.c  InteractionSystem.h  LifetimeSystem.c  LifetimeSystem.h  LockOnViewSystem.c  LockOnViewSystem.h  ParticlesSystem.c  ParticlesSystem.h  PhysicsSystem.c  PhysicsSystem.h  PlanetaryAlignmentSystem.c  PlanetaryAlignmentSystem.h  RenderingSystem.c  RenderingSystem.h  ShadedCanvasSystem.c  ShadedCanvasSystem.h  SpriteSystem.c  SpriteSystem.h  UpdateSystem.c  UpdateSystem.h  VelocitySystem.c  VelocitySystem.h
src/util/: debug.c  debug.h  mem_debug.c  mem_debug.h  perlin_noise.c  perlin_noise.h  vector.c  vector.h  vector2d.c
